--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity android:name=".JoinActivity"
             android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
+        <activity android:name=".OsRegistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
